v1.1.0/modules/schema/pages/class/CSCtype1.adoc
= `CSCtype1`
:toclevels: 4



[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:CSCtype1`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/HVDCDynamics.adoc[`HVDCDynamics`]
**** xref::class/CSCDynamics.adoc[`CSCDynamics`]
***** *`CSCtype1`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<CCAinverter,`CCAinverter`>>
//| [[slots_table.CCAinverter]]<<CCAinverter,`CCAinverter`>>
| 1 +
xref::class/CCAinverter.adoc[`CCAinverter`]
| _n/a_
| _n/a_

| <<CCArectifierControl,`CCArectifierControl`>>
//| [[slots_table.CCArectifierControl]]<<CCArectifierControl,`CCArectifierControl`>>
| 1 +
xref::class/CCArectifierControl.adoc[`CCArectifierControl`]
| _n/a_
| _n/a_

| <<IdcInverterControl,`IdcInverterControl`>>
//| [[slots_table.IdcInverterControl]]<<IdcInverterControl,`IdcInverterControl`>>
| 1 +
xref::class/IdcInverterControl.adoc[`IdcInverterControl`]
| _n/a_
| _n/a_

| <<IgnAngleContInverter,`IgnAngleContInverter`>>
//| [[slots_table.IgnAngleContInverter]]<<IgnAngleContInverter,`IgnAngleContInverter`>>
| 1 +
xref::class/IgnAngleContInverter.adoc[`IgnAngleContInverter`]
| _n/a_
| _n/a_

| <<CSConverter,`CSConverter`>>
//| [[slots_table.CSConverter]]<<CSConverter,`CSConverter`>>
| 1 +
xref::class/CsConverter.adoc[`CsConverter`]
| +++Current source converter to which current source converter dynamics model applies.+++
| xref::class/CSCDynamics.adoc[`CSCDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#CCAinverter]
=== `CCAinverter`



[cols="h,4",width=65%]
|===
| URI
| `cim:CSCtype1.CCAinverter`
| Cardinality
| 1
| Type
| xref::class/CCAinverter.adoc[`CCAinverter`]


|===

////
[.text-left]
--
<<slots_table.CCAinverter,&#10548;>>
--
////


//[discrete]
[#CCArectifierControl]
=== `CCArectifierControl`



[cols="h,4",width=65%]
|===
| URI
| `cim:CSCtype1.CCArectifierControl`
| Cardinality
| 1
| Type
| xref::class/CCArectifierControl.adoc[`CCArectifierControl`]


|===

////
[.text-left]
--
<<slots_table.CCArectifierControl,&#10548;>>
--
////


//[discrete]
[#CSConverter]
=== `CSConverter`
+++Current source converter to which current source converter dynamics model applies.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CSCDynamics.CSConverter`
| Cardinality
| 1
| Type
| xref::class/CsConverter.adoc[`CsConverter`]

| Inherited from
| xref::class/CSCDynamics.adoc[`CSCDynamics`]


|===

////
[.text-left]
--
<<slots_table.CSConverter,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#IdcInverterControl]
=== `IdcInverterControl`



[cols="h,4",width=65%]
|===
| URI
| `cim:CSCtype1.IdcInverterControl`
| Cardinality
| 1
| Type
| xref::class/IdcInverterControl.adoc[`IdcInverterControl`]


|===

////
[.text-left]
--
<<slots_table.IdcInverterControl,&#10548;>>
--
////


//[discrete]
[#IgnAngleContInverter]
=== `IgnAngleContInverter`



[cols="h,4",width=65%]
|===
| URI
| `cim:CSCtype1.IgnAngleContInverter`
| Cardinality
| 1
| Type
| xref::class/IgnAngleContInverter.adoc[`IgnAngleContInverter`]


|===

////
[.text-left]
--
<<slots_table.IgnAngleContInverter,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/CCAinverter.adoc[`CCAinverter`] | xref::class/CCAinverter.adoc#CSCtype1[`CSCtype1`]



| xref::class/CCArectifierControl.adoc[`CCArectifierControl`] | xref::class/CCArectifierControl.adoc#CSCtype1[`CSCtype1`]



| xref::class/IdcInverterControl.adoc[`IdcInverterControl`] | xref::class/IdcInverterControl.adoc#CSCtype1[`CSCtype1`]



| xref::class/IgnAngleContInverter.adoc[`IgnAngleContInverter`] | xref::class/IgnAngleContInverter.adoc#CSCtype1[`CSCtype1`]


|===

